# num_exp_no_more_hooks_in_the_surface_code

./: .gitignore  README.md  pyproject.toml
simulation/: .gitignore  _noise.py  make_noisy_circuit.py  plot.py  run_sinter.py
simulation/circuit/uniform_depolarizing/: circuit_x_ZX_interleaved_XXmeas_d11_p0.0001_uniform_depolarizing.stim  circuit_x_ZX_interleaved_XXmeas_d11_p0.0002_uniform_depolarizing.stim  circuit_x_ZX_interleaved_XXmeas_d11_p0.0005_uniform_depolarizing.stim  circuit_x_ZX_interleaved_XXmeas_d11_p0.001_uniform_depolarizing.stim  circuit_x_ZX_interleaved_XXmeas_d11_p0.002_uniform_depolarizing.stim  circuit_x_ZX_interleaved_XXmeas_d11_p0.005_uniform_depolarizing.stim  circuit_x_ZX_interleaved_XXmeas_d11_p0.01_uniform_depolarizing.stim  circuit_x_ZX_interleaved_XXmeas_d11_without_noise.stim  circuit_x_ZX_interleaved_XXmeas_d13_without_noise.stim  circuit_x_ZX_interleaved_XXmeas_d3_p0.0001_uniform_depolarizing.stim  circuit_x_ZX_interleaved_XXmeas_d3_p0.0002_uniform_depolarizing.stim  (+475 more)
simulation/csv/: no_more_hooks.csv
simulation/x_ZX_interleaved_XXmeas/: ouput_circuit.py
simulation/x_alternating_XXmeas/: ouput_circuit.py
simulation/x_normal_XXmeas/: ouput_circuit.py  test.py
simulation/z_ZX_interleaved_Z2X2X_X2Z2Z_memory/: test.py
simulation/z_ZX_interleaved_Z2X_X2Z_memory/: test.py
simulation/z_ZX_interleaved_Z2Z_X2X_memory/: ouput_circuit.py
simulation/z_alternating_XXmeas/: ouput_circuit.py  test.py
simulation/z_alternating_memory/: ouput_circuit.py  test.py
simulation/z_normal_XXmeas/: ouput_circuit.py
(+429 files in other folders)
